--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^9.23",
         "laravel/helpers": "^1.5",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.0",
         "phpoffice/phpspreadsheet": "dev-NumberFormatMask-Helpers",
         "psr/simple-cache": "1.0.0"
     },
