--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
     "scripts": {
         "dev": "vite dev",
-	"watch": "vite watch"
+        "watch": "vite watch"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
+        "@mui/material": "^5.10.1",
         "axios": "^0.27.2",
         "laravel-vite": "^0.0.24",
         "laravel-vite-plugin": "^0.5.3",
