--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
     "scripts": {
-        "dev": "vite dev",
-        "watch": "vite watch"
+        "dev": "mix",
+        "watch": "mix watch"
     },
     "dependencies": {
         "@emotion/react": "^11.10.0",
         "@emotion/styled": "^11.10.0",
         "@mui/material": "^5.10.1",
         "axios": "^0.27.2",
+        "laravel-mix": "^6.0.49",
         "laravel-vite": "^0.0.24",
         "laravel-vite-plugin": "^0.5.3",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-bootstrap": "^2.5.0",
         "react-dom": "^18.2.0",
+        "react-phone-number-input": "^3.2.8",
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.18.6",
         "@popperjs/core": "^2.10.2",
         "@vitejs/plugin-react": "^2.0.0",
         "bootstrap": "^5.1.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "sass": "^1.32.11"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^12.6.0"
     }
 }
