--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
         "watch": "mix watch"
     },
     "dependencies": {
+        "@coreui/chartjs": "^2.0.0",
+        "@coreui/coreui": "^4.2.1",
+        "@coreui/icons": "^2.1.0",
+        "@coreui/icons-react": "^2.1.0",
+        "@coreui/react": "^4.3.1",
+        "@coreui/react-chartjs": "^2.1.0",
+        "@coreui/utils": "^1.3.1",
         "@emotion/react": "^11.10.0",
         "@emotion/styled": "^11.10.0",
+        "@mui/icons-material": "^5.10.2",
         "@mui/material": "^5.10.1",
         "axios": "^0.27.2",
+        "chart.js": "^3.9.1",
+        "core-js": "^3.24.1",
         "laravel-mix": "^6.0.49",
         "laravel-vite": "^0.0.24",
         "laravel-vite-plugin": "^0.5.3",
@@ -16,8 +26,11 @@
         "react-bootstrap": "^2.5.0",
         "react-dom": "^18.2.0",
         "react-phone-number-input": "^3.2.8",
+        "react-redux": "^8.0.2",
         "react-router": "^6.3.0",
-        "react-router-dom": "^6.3.0"
+        "react-router-dom": "^6.3.0",
+        "redux": "^4.2.0",
+        "simplebar-react": "^2.4.1"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.18.6",
