--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "laravel-vite-plugin": "^0.5.3",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
+        "react-avatar": "^5.0.3",
         "react-bootstrap": "^2.5.0",
         "react-dom": "^18.2.0",
         "react-phone-number-input": "^3.2.8",
