--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-redux": "^8.0.2",
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
+        "react-select": "^5.4.0",
         "redux": "^4.2.0",
         "simplebar-react": "^2.4.1"
     },
