--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
         "phpoffice/phpspreadsheet": "dev-NumberFormatMask-Helpers",
-        "psr/simple-cache": "1.0.0"
+        "psr/simple-cache": "1.0.0",
+        "shetabit/payment": "^4.3"
     },
     "autoload": {
         "classmap": [
