add auth api and some basic methods

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "kavenegar/php": "^1.2",
         "laravel/framework": "^9.23",
         "laravel/helpers": "^1.5",
+        "laravel/passport": "^11.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
         "phpoffice/phpspreadsheet": "dev-NumberFormatMask-Helpers",
