--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/passport": "^11.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
-        "phpoffice/phpspreadsheet": "dev-NumberFormatMask-Helpers",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.24",
         "psr/simple-cache": "1.0.0",
         "shetabit/payment": "^4.3"
     },
