--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react": "^18.2.0",
         "react-avatar": "^5.0.3",
         "react-bootstrap": "^2.5.0",
+        "react-chat-elements": "^12.0.3",
         "react-dom": "^18.2.0",
         "react-phone-number-input": "^3.2.8",
         "react-redux": "^8.0.2",
