--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
         "axios": "^0.27.2",
         "chart.js": "^3.9.1",
         "core-js": "^3.24.1",
+        "daisyui": "^2.24.0",
+        "emoji-picker-react": "^3.6.1",
+        "flowbite": "^1.5.3",
+        "gulp-cli": "^2.3.0",
         "laravel-mix": "^6.0.49",
         "laravel-vite": "^0.0.24",
         "laravel-vite-plugin": "^0.5.3",
@@ -33,7 +37,9 @@
         "react-router-dom": "^6.3.0",
         "react-select": "^5.4.0",
         "redux": "^4.2.0",
-        "simplebar-react": "^2.4.1"
+        "simplebar-react": "^2.4.1",
+        "tailwindcss": "^3.1.8",
+        "ts-loader": "^9.3.1"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.18.6",
