--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
         "react-select": "^5.4.0",
+        "recharts": "^2.1.13",
         "redux": "^4.2.0",
         "simplebar-react": "^2.4.1",
         "tailwindcss": "^3.1.8",
