--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
         "maatwebsite/excel": "^3.1",
+        "php-open-source-saver/jwt-auth": "^2.0",
         "phpoffice/phpspreadsheet": "^1.24",
         "psr/simple-cache": "1.0.0",
         "shetabit/payment": "^4.3"
