fix panel admin

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/style.css": "/css/style.css"
+    "/js/vue.js": "/js/vue.js",
+    "/css/vue.css": "/css/vue.css"
 }
