--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
         "@emotion/styled": "^11.10.0",
         "@mui/icons-material": "^5.10.2",
         "@mui/material": "^5.10.1",
+        "@vue/cli-service": "^5.0.8",
         "axios": "^0.27.2",
-        "chart.js": "^3.9.1",
+        "babel-preset-es2015": "^6.24.1",
+        "chart.js": "^2.9.4",
         "core-js": "^3.24.1",
         "daisyui": "^2.24.0",
         "emoji-picker-react": "^3.6.1",
         "flowbite": "^1.5.3",
         "gulp-cli": "^2.3.0",
+        "html2pdf.js": "^0.10.1",
+        "jquery": "^3.6.1",
         "laravel-mix": "^6.0.49",
         "laravel-vite": "^0.0.24",
         "laravel-vite-plugin": "^0.5.3",
         "lodash": "^4.17.21",
+        "popper.js": "^1.16.1",
         "react": "^18.2.0",
         "react-avatar": "^5.0.3",
         "react-bootstrap": "^2.5.0",
@@ -39,8 +44,16 @@
         "recharts": "^2.1.13",
         "redux": "^4.2.0",
         "simplebar-react": "^2.4.1",
+        "skycons": "^1.0.0",
+        "sweetalert2": "^11.4.33",
         "tailwindcss": "^3.1.8",
-        "ts-loader": "^9.3.1"
+        "ts-loader": "^9.3.1",
+        "vue": "^2.5.7",
+        "vue-chartjs": "^3.5.1",
+        "vue-loading-overlay": "^3.3.2",
+        "vue-persian-datetime-picker": "^2.10.4",
+        "vue2-dropzone": "^3.6.0",
+        "vue2-editor": "^2.10.3"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.18.6",
