--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "hekmatinasser/verta": "^8.1",
         "illuminate/cache": "^9.23",
         "kavenegar/php": "^1.2",
+        "ladumor/laravel-pwa": "^0.0.3",
         "laravel/framework": "^9.23",
         "laravel/helpers": "^1.5",
         "laravel/passport": "^11.0",
