--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
         "react-select": "^5.4.0",
+        "react-voice-recorder": "^2.1.2",
         "recharts": "^2.1.13",
         "redux": "^4.2.0",
         "simplebar-react": "^2.4.1",
