--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-redux": "^8.0.2",
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
+        "react-search-box": "^2.3.0",
         "react-select": "^5.4.0",
         "react-voice-recorder": "^2.1.2",
         "recharts": "^2.1.13",
