--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-bootstrap": "^2.5.0",
         "react-chat-elements": "^12.0.3",
         "react-dom": "^18.2.0",
+        "react-image-crop": "^10.0.7",
         "react-phone-number-input": "^3.2.8",
         "react-redux": "^8.0.2",
         "react-router": "^6.3.0",
