--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "vue-chartjs": "^3.5.1",
         "vue-loading-overlay": "^3.3.2",
         "vue-persian-datetime-picker": "^2.10.4",
+        "vue-template-loader": "^1.1.0",
         "vue2-dropzone": "^3.6.0",
         "vue2-editor": "^2.10.3"
     },
