--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "@emotion/styled": "^11.10.0",
         "@mui/icons-material": "^5.10.2",
         "@mui/material": "^5.10.1",
+        "@mui/x-date-pickers": "^5.0.4",
         "@vue/cli-service": "^5.0.8",
         "axios": "^0.27.2",
         "babel-preset-es2015": "^6.24.1",
         "chart.js": "^2.9.4",
         "core-js": "^3.24.1",
         "daisyui": "^2.24.0",
+        "dayjs": "^1.11.5",
         "emoji-picker-react": "^3.6.1",
         "flowbite": "^1.5.3",
         "gulp-cli": "^2.3.0",
