--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "@babel/preset-react": "^7.18.6",
         "@popperjs/core": "^2.10.2",
         "@vitejs/plugin-react": "^2.0.0",
+        "babel-plugin-root-import": "^6.6.0",
         "bootstrap": "^5.1.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
