--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
         "chart.js": "^2.9.4",
         "core-js": "^3.24.1",
         "daisyui": "^2.24.0",
+        "datejs": "^1.0.0-rc3",
         "dayjs": "^1.11.5",
         "emoji-picker-react": "^3.6.1",
         "flowbite": "^1.5.3",
         "gulp-cli": "^2.3.0",
         "html2pdf.js": "^0.10.1",
+        "jalaali-js": "^1.2.6",
         "jquery": "^3.6.1",
         "laravel-mix": "^6.0.49",
         "laravel-vite": "^0.0.24",
@@ -34,6 +36,7 @@
         "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
         "react": "^18.2.0",
+        "react-advance-jalaali-datepicker": "^1.4.0",
         "react-avatar": "^5.0.3",
         "react-bootstrap": "^2.5.0",
         "react-chat-elements": "^12.0.3",
