add loading component and edit counselor send plan files

--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
         "react-dom": "^18.2.0",
         "react-image-crop": "^10.0.7",
         "react-phone-number-input": "^3.2.8",
+        "react-promise-tracker": "^2.1.1",
         "react-redux": "^8.0.2",
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
         "react-search-box": "^2.3.0",
         "react-select": "^5.4.0",
+        "react-spinners": "^0.13.6",
         "react-stars": "^2.2.5",
         "react-voice-recorder": "^2.1.2",
         "recharts": "^2.1.13",
